--- a/main.css
+++ b/main.css
@@ -473,3 +473,105 @@ button:hover {
       justify-content: space-between;
     }
   }
+
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 10px;
+    right: 43px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #c00;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+.my-skill {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(./img/skills.avif);
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+}
+
+.my-skill .title {
+  width: 20%;
+  margin: auto;
+  padding: 80px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-weight: 600;
+  font-family: Montserrat,sans-serif;
+}
+
+.my-skill .title p {
+  font-size: 150%;
+}
+
+.my-skill .text {
+  text-align: center;
+  font-size: 25px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  color: white;
+  margin-bottom: 50px;
+}
+
+.skills{
+  width: 70%;
+  margin: auto;
+  z-index: 1;
+}
+
+.skill-name{
+  font-size: 18px;
+  font-weight: 700;
+  color: #f1f1f1;
+  text-transform: uppercase;
+  margin: 20px 0;
+}
+
+.skill-bar{
+  height: 14px;
+  background: #282828;
+  border-radius: 3px;
+}
+
+.skill-pers{
+  height: 14px;
+  background: #c00;
+  border-radius: 3px;
+  position: relative;
+  animation: fillBars 2.5s 1;
+}
+
+.skill-pers::before{
+  content: attr(per);
+  position: absolute;
+  padding: 8px 10px;
+  background: #f1f1f1;
+  border-radius: 4px;
+  font-size: 12px;
+  top: -43px;
+  right: 0;
+  transform: translateX(50%);
+}
+
+.skill-pers::after{
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: #f1f1f1;
+  top: -20px;
+  right: 0;
+  transform: translateX(50%) rotate(45deg);
+  border-radius: 2px;
+}
